--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -435,9 +435,9 @@ p {
 .welcome-container {
   height: fit-content;
   width: 100%;
-  padding: 12px; /* p-3 */
-  grid-column: 1 / -1; /* col-span-full */
-  margin-bottom: 1.5rem; /* lg:mb-6 */
+  padding: 24px;
+  grid-column: 1 / -1;
+  margin-bottom: 1.5rem;
 }
 
 /* Large screens (lg and up) */
@@ -501,6 +501,7 @@ p {
   position: relative;
   width: 100%;
   border-radius: 12px;
+  padding: 12px;
   overflow: hidden;
 }
 
@@ -508,6 +509,7 @@ p {
 .slide {
   width: 100%;
   height: 400px;
+  border-radius: 12px;
   background-size: cover;
   background-position: center;
   display: flex;
